# lifted

./: .gitignore  ChangeLog.md  LICENSE  README.md  lifted.cabal  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-nightly.yaml
src/Data/Bool/: Lifted.hs
src/Data/Either/: Lifted.hs
src/Data/Eq/: Lifted.hs
src/Data/Function/: Lifted.hs
src/Data/Functor/: Lifted.hs
src/Data/Maybe/: Lifted.hs
