name:                   lifted
version:                0.1.0.0
synopsis:               Functions from base lifted over Functor or Applicative.
description:
  Functions from base, including few that aren't, lifted over Functor or Applicative.
  .
  These functions have proved useful to the author over the years. All of them
  have, at some point, being used in a production code.

homepage:               https://github.com/trskop/lifted
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2011, 2013-2016 Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.Bool.Lifted
    , Data.Either.Lifted
    , Data.Eq.Lifted
    , Data.Function.Lifted
    , Data.Functor.Lifted
    , Data.Maybe.Lifted
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:     CPP, NoImplicitPrelude

  build-depends:        base >=4.8 && <5

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
--    -Werror
